--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,8 +6,7 @@
 @layer base {
 
     .inconsolata {
-        font-family: "Inconsolata", monospace;
-        font-optical-sizing: auto;
+        font-family: "Major Mono Display", monospace;
         font-weight: 400;
         font-style: normal;
     }
