--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 
     html,
     body {
-        @apply bg-black text-neutral-500 major-mono
+        @apply bg-black text-neutral-200 major-mono
     }
 
     main {
@@ -25,7 +25,7 @@
 
 @layer components {
     .title {
-        @apply absolute z-20 lg:text-4xl md:text-xl sm:text-lg p-4 bg-black text-[#30FF95] text-lg
+        @apply absolute z-20 lg:text-2xl md:text-xl sm:text-lg p-4 bg-black text-lg text-[#30FF95]
     }
 
     .nav {
@@ -33,7 +33,7 @@
     }
 
     .nav-grid {
-        @apply col-start-7 col-span-2 row-start-1 row-span-2 md:row-span-1 lg:col-start-6 lg:col-span-1 md:col-start-6 md:col-span-3
+        @apply col-start-7 col-span-8 row-start-1 row-span-2 md:row-span-1 lg:col-start-6 lg:col-span-1 md:col-start-6 md:col-span-3
     }
 
 }
